re PR fortran/19182 (Error messages seem to be printed slower)

2005-01-16  Tobias Schlueter  <tobias.schlueter@physik.uni-muenchen.de>

	PR fortran/19182
	* error.c (error_char): Line-buffer errors / warnings.

From-SVN: r93734